--- a/catalog/catalog-info.yaml
+++ b/catalog/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: micropets-fish-python
+  name: fishes
   description: Micropets Fish Service
   tags:
     - python
